--- a/report/Introduction.tex
+++ b/report/Introduction.tex
@@ -61,7 +61,6 @@ Prenons par exemple la fonction $f(x_1, x_2, x_3) = x_1 \lor (x_2 \land x_3)$. L
 \end{figure}
 
 Les diagrammes de décision prennent avantage de la \textbf{structure} interne de la donnée (ici, une fonction booléenne). On note d'une part que les labels ne sont pas nécessaires pour reconstituer les valeurs prises par la fonction.
-
 D'autre part, dans le pire des cas, c'est-à-dire celui où la fonction ne possède aucune structure permettant une réduction, la taille du diagramme de décision (son nombre de branches) vaut $2^{n+1} - 2$ ce qui comme le nombre de valeurs $2^n$ à stocker dans une table de vérité, est \textbf{exponentiel} en $n$. Dans le pire cas, les diagrammes de décision ne permettent pas d'amélioration, mais ne sont pas non plus asymptotiquement pire que les tables de vérité.
 
 \subsubsection*{Interprétation abstraite}
@@ -77,7 +76,7 @@ Il existe de nombreux cas d'utilisation de l'interprétation abstraite \cite{Ros
 \section{Contribution}
 \label{sec:Contribution}
 
-Les différents concepts présentés dans l'état de l'art permettent tous d'améliorer la vitesse de calcul ou la taille en mémoire d'une donnée. Il s'agit donc de \textbf{combiner ces concepts} dans ce projet. L'objectif du projet était donc de proposer un modèle de diagrammes de décision quantiques abstraits et additifs, et de les simuler pour en étudier les performances en comparaison d'autres modèle.
+Les différents concepts présentés dans l'état de l'art permettent tous d'améliorer la vitesse de calcul ou la taille en mémoire d'une donnée. Il s'agit donc de \textbf{combiner ces concepts} dans ce projet, en ajoutant une dimension supplémentaire, l'additivité : le fait pour un diagramme d'avoir plusieurs fils droits (respectivement gauches), l'interprétation étant que le « fils droit effectif » est la somme des fils droits (respectivement gauches) du diagramme. L'objectif du projet était donc de proposer un modèle de diagrammes de décision quantiques abstraits et additifs, et de les simuler pour en étudier les performances en comparaison d'autres modèle.
 
 De manière préliminaire, une étude des intervalles complexes polaires a été réalisée, ce qui n'avait pas été fait jusqu'à présent.
 Un \textbf{modèle} mathématique de la structure de données et de méthodes de réduction ont été formalisés, et des algorithmes de réduction ont été développés pour simplifier ces diagrammes. Une \textbf{implémentation} de ces algorithmes a été réalisée, sans se baser sur des bibliothèques existantes (mise à part pour les tests unitaires).
