--- a/report/main.tex
+++ b/report/main.tex
@@ -32,6 +32,9 @@
 \usepackage{setspace}
 \usepackage{svg}
 
+\usepackage{wrapfig}
+\usepackage{multicol}
+
 % Special symbols
 \usepackage{amssymb}
 \usepackage{mathrsfs}
