--- a/report/Conclusion.tex
+++ b/report/Conclusion.tex
@@ -6,7 +6,7 @@
 
 Le modèle qui a été développé, avec algorithme de réduction, permet de limiter autant que souhaité la taille d'un état en mémoire, au prix d'une perte de précision. Le cadre mathématique de celui-ci a été défini, et des algorithmes de réduction ont étés prouvés sur cette structure de données.
 
-L'implémentation, n'a pas encore fourni de résultats expérimentaux significatifs, mais permet déjà de simuler des diagrammes de décision quantiques de manière performante. Sa robustesse et durabilité sont assurées par des tests unitaires.
+L'implémentation, n'a pas encore fourni de résultats expérimentaux significatifs, mais permet déjà de simuler des diagrammes de décision quantiques de manière performante. Sa robustesse est assurée par des tests unitaires.
 
 Le travail réalisé sur cette période est donc encourageant : malgré des difficultés rencontrées, tant d'un point de vue technique en programmation que dans la définition du modèle, ayant parfois amené à revenir en arrière avant de trouver une bonne définition de l'erreur par exemple, les résultats théoriques obtenus sont prometteurs.
 
@@ -14,6 +14,4 @@ Le travail réalisé sur cette période est donc encourageant : malgré des diff
 
 Plusieurs perspectives peuvent être envisagées pour prolonger les travaux réalisés. D'une part, puisque plusieurs choix dans la définition du modèle ont étés faits de manière arbitraire parmi plusieurs options possibles (fonction d'erreur notamment), il est pertinent de réaliser de nombreuses simulations dans des configurations différentes afin de déterminer les choix les plus pertinents.
 
-Nous pourrons aussi étendre le modèle avec d'autres concepts, comme les automates d'arbres pour la vérification \cite{Chen_2023} ou les diagrammes de décisions et applications localement inversibles (LIMDD) \cite{Vinkhuijzen_2023}. Enfin, l'implémentation aurait à gagner d'être plus facile d'utilisation, par exemple avec une interface graphique et un lecteur QASM (équivalent quantique du format assembleur en informatique classique).
-
-Ces axes de travail pourront être explorés au premier semestre de la deuxième année du cursus CentraleSupélec si le projet est prolongé.
+Nous pourrons aussi étendre le modèle avec d'autres concepts, comme les automates d'arbres pour la \textbf{vérification} \cite{Chen_2023} ou les diagrammes de décisions et applications localement inversibles \cite{Vinkhuijzen_2023}. Enfin, l'implémentation aurait à gagner d'être plus facile d'utilisation, par exemple avec une \textbf{interface graphique} et un \textbf{lecteur QASM} (équivalent quantique du format assembleur en informatique classique). Ces axes de travail pourront être explorés au premier semestre de la deuxième année du cursus CentraleSupélec si le projet est prolongé.
