🔖 Semi-final version

--- a/presentation/annexes.tex
+++ b/presentation/annexes.tex
@@ -23,9 +23,9 @@
 \begin{frame}{Pile technique}
 \begin{columns}
     \begin{column}{0.5\textwidth}
-        Implémentation (2,2k lignes de code)
+        Implémentation
         \begin{itemize}
-            \item \textbf{Code}
+            \item \textbf{Code} (2,2k lignes)
             \begin{itemize}
                 \item Langage C++
                 \item GNU C Compiler
