--- a/presentation/etat-de-l-art.tex
+++ b/presentation/etat-de-l-art.tex
@@ -117,8 +117,8 @@
         $n$ qubits $\Rightarrow$ $2^n$ états incompatibles
     \end{center}
 On note les états sous forme de \textbf{vecteurs}
-$$x \ket {01} + y \ket {11} = \begin{pmatrix}
-    x \\ 0 \\ y \\ 0
+$$\alpha \ket {01} + \beta \ket {11} = \begin{pmatrix}
+    \alpha \\ 0 \\ \beta \\ 0
 \end{pmatrix}$$
 \end{frame}
 
@@ -128,14 +128,14 @@ $$x \ket {01} + y \ket {11} = \begin{pmatrix}
         \begin{tabular}{c|c|c}
             $x_1$ & $x_2$ & $\braket{x_1 x_2|\psi}$ \\
             \hline
-            0 & 0 & x \\
-            0 & 1 & 0 \\
-            1 & 0 & y \\
+            0 & 0 & $\alpha$ \\
+            0 & 1 & 0        \\
+            1 & 0 & $\beta$  \\
             1 & 1 & 0
         \end{tabular}
 
         \vspace{1em}
-        \small{pour $\ket \psi = x \ket {00} + y \ket {10}$}
+        \small{pour $\ket \psi = \alpha \ket {00} + \beta \ket {10}$}
     \end{center}
 \end{frame}
 
