--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -2,8 +2,11 @@
 
 \usepackage[T1]{fontenc}
 \usepackage[french]{babel}
+\usepackage{url}
+
 \DecimalMathComma
 \usepackage{braket}
+
 \usepackage{svg}
 \svgsetup{inkscapelatex=false}
 
@@ -11,6 +14,11 @@
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.18}
 \usepackage{amsfonts}
+
+\usepackage{xcolor}
+\definecolor{ups}{RGB}{86,08,59}
+\definecolor{cs}{RGB}{148,13,56}
+
 \usepackage{xfrac}
 \newcommand{\somme}{\displaystyle\sum}
 
@@ -24,6 +32,7 @@
 \author{Malo Leroy}
 \institute{Parcours recherche -- CentraleSupélec}
 
+% Figures and diagrams
 \usepackage{tikz}
 \usetikzlibrary{positioning}
 \usepackage{tikz-cd}
@@ -92,6 +101,7 @@ Suite du projet
 \begin{frame}{Conclusion}
 \begin{center}
     \huge{Conclusion}
+    % Ce projet m'a permis de faire 
 \end{center}
 \end{frame}
 
