--- a/presentation/travail-resultats.tex
+++ b/presentation/travail-resultats.tex
@@ -17,6 +17,8 @@
   2+10i \\ 1+4i \\ 2i \\ i
   \end{pmatrix}$
 
+  \vspace{2em}
+
 \end{frame}
 
 \begin{frame}{Modèle théorique} % with colors
@@ -75,4 +77,6 @@
 
 \begin{frame}{Résultats}
   On peut toujours plus réduire les diagrammes
+  $$\Downarrow$$
+  Gain en espace arbitrairement grand (jusqu'à exponentiel)
 \end{frame}
