--- a/doc/main.tex
+++ b/doc/main.tex
@@ -11,6 +11,7 @@
 
 \usepackage{lmodern}
 \newtheorem{theorem}{Theorem}[chapter]
+\newtheorem{prop}{Proposition}[section]
 
 \usepackage{tikz}
 \usetikzlibrary{positioning}
