--- a/doc/Intervals/intervals.tex
+++ b/doc/Intervals/intervals.tex
@@ -1,4 +1,4 @@
-\section{Introduction: real intervals}
+\section{Generalities}
 
 The purpose of quantum decision diagrams is to provide a more efficient way to store and manipulate quantum states of a finite number of qubits. A $n$-qubit state is indeed traditionally represented as an element of $\mathbb{C}^{2^n}$ (with norm 1), which takes exponential space as $n$ grows. Abstract states will be in this part defined similarly, but with complex intervals instead of complex numbers.
 
