--- a/doc/main.tex
+++ b/doc/main.tex
@@ -56,6 +56,10 @@
 
 \input{diagrams.tex}
 
+\chapter{Gate application}
+
+\input{gates.tex}
+
 \chapter{Reduction}
 
 \input{Reduction/reduction.tex}
